# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\api\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,9 +19,14 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('/home', [App\Http\Controllers\api\HomeController::class, 'index']);
-Route::get('terms', [App\Http\Controllers\api\TermController::class, 'index']);
-Route::post('terms', [App\Http\Controllers\api\TermController::class, 'store']);
-Route::get('terms/{id}', [App\Http\Controllers\api\TermController::class, 'show']);
-Route::put('terms/{id}', [App\Http\Controllers\api\TermController::class, 'update']);
-Route::delete('terms/{id}', [App\Http\Controllers\api\TermController::class, 'destroy']);
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/home', [App\Http\Controllers\api\HomeController::class, 'index']);
+    Route::get('/terms', [App\Http\Controllers\api\TermController::class, 'index']);
+    Route::post('/terms', [App\Http\Controllers\api\TermController::class, 'store']);
+    Route::get('/terms/{id}', [App\Http\Controllers\api\TermController::class, 'show']);
+    Route::put('/terms/{id}', [App\Http\Controllers\api\TermController::class, 'update']);
+    Route::delete('terms/{id}', [App\Http\Controllers\api\TermController::class, 'destroy']);
+});
+
+Route::post('login', [AuthController::class, 'login'])->name('login');
+Route::post('logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
